gave correct z-index to dices

--- a/style/styles.css
+++ b/style/styles.css
@@ -159,6 +159,7 @@ header {
 	display:flex;
 	display:-webkit-flex;
 	justify-content:space-around;
+	z-index:1;
 }
 
 #dices>div {
